--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "server.js" }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
   
